--- a/2.html
+++ b/2.html
@@ -12,23 +12,10 @@
         <div class="main">
             <div class="container">
                 <div class="sign-in">
-                    <h1>SIGN IN</h1>
+                   <div><h1 class="sign-text">SIGN IN</h1></div> 
                 </div>
-                <div class="inputs">
-                    <div class="left-input">
-                        <div><p>Username</p></div>
-                        <div><p>Password</p></div>
-                    </div>
-                    <div class="right-input">
-                        <div><input class="input-text" type="text" placeholder="Enter Username"></div>
-                        <div><input class="input-text" type="password" placeholder="Enter Password"></div>
-                        <div>
-                            <input type="checkbox">
-                            <label>Remember me</label>
-                            <span>Forgot Password?</span>
-                        </div>
-                        <div><input type="button" value="Login"></div>
-                    </div>
+                <div class="inputs-container">
+                    
                 </div>
             </div>
         </div>
