--- a/2.html
+++ b/2.html
@@ -11,9 +11,11 @@
     <main>
         <div class="main">
             <div class="container">
+                
                 <div class="sign-in">
+                    <div class="sign-in-dark">
                    <div><h1 class="sign-text">SIGN IN</h1></div> 
-                </div>
+                </div></div>
                 <div class="inputs-container">
                     
                 </div>
