--- a/2.html
+++ b/2.html
@@ -13,11 +13,30 @@
             <div class="container">
                 
                 <div class="sign-in">
-                    <div class="sign-in-dark">
+                    <div class="sign-in-frontshadow">
                    <div><h1 class="sign-text">SIGN IN</h1></div> 
                 </div></div>
                 <div class="inputs-container">
-                    
+                    <div class="input-text">
+                        <span class="input-helper-text">Username</span>
+                        <span><input class="input-text-box" type="text" placeholder="Enter Username"></span>
+                    </div>
+                    <div class="input-text">
+                        <span class="input-helper-text">Password</span>
+                        <span><input class="input-text-box" type="text" placeholder="Enter Password"></span>
+                    </div>
+                    <div class="links">
+                        <span>
+                            <input type="checkbox">
+                            <label>Remember me</label>
+                        </span>
+                        <span>
+                            Forgot Password?
+                        </span>
+                    </div>
+                    <div class="login-btn-div">
+                        <input class="login-btn" type="button" value="LOGIN">
+                    </div>
                 </div>
             </div>
         </div>
