inputs are designed

--- a/2.html
+++ b/2.html
@@ -16,6 +16,7 @@
                     <div class="sign-in-frontshadow">
                    <div><h1 class="sign-text">SIGN IN</h1></div> 
                 </div></div>
+
                 <div class="inputs-container">
                     <div class="input-text">
                         <span class="input-helper-text">Username</span>
@@ -23,16 +24,23 @@
                     </div>
                     <div class="input-text">
                         <span class="input-helper-text">Password</span>
-                        <span><input class="input-text-box" type="text" placeholder="Enter Password"></span>
+                        <span><input class="input-text-box pass-input" type="password" placeholder="Enter Password"></span>
                     </div>
                     <div class="links">
+                        <div class="left-link">
+                        <span class="remember">
+                            <input class="remember-chechkbox" type="checkbox">
+                        </span>
                         <span>
-                            <input type="checkbox">
                             <label>Remember me</label>
                         </span>
-                        <span>
-                            Forgot Password?
-                        </span>
+                        </div>
+                        <div class="right-link">
+                            <span class="forgot">
+                                Forgot Password?
+                            </span>
+                        </div>
+                        
                     </div>
                     <div class="login-btn-div">
                         <input class="login-btn" type="button" value="LOGIN">
