--- a/2.html
+++ b/2.html
@@ -29,7 +29,7 @@
                     <div class="links">
                         <div class="left-link">
                         <span class="remember">
-                            <input class="remember-chechkbox" type="checkbox">
+                            <input type="checkbox">
                         </span>
                         <span>
                             <label>Remember me</label>
