--- a/3.html
+++ b/3.html
@@ -10,6 +10,9 @@
     <title>Document</title>
 </head>
 <body>
-    <i class="fa fa-search" aria-hidden="true"></i>
+    <div class="bg">
+        <div class="bg-frontshadow">
+        </div>
+    </div>
 </body>
 </html>
