--- a/3.html
+++ b/3.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="3style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" href="3style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="bg">
-        <div class="bg-frontshadow">
+      <div class="bg-frontshadow">
+        <div class="main-container">
+          <div class="login-form">
+            <div class="logo">
+              <img class="logo-img" src="logo.png" alt="logo" />
+            </div>
+            <div class="login-text">
+              <h2>LOG IN</h2>
+            </div>
+            <div class="inputs">
+              <div class="input-icon"><i class="fas fa-user-alt"></i></div>
+              <div class="input-text-div">
+                <input class="input-text" type="text" placeholder="Username" />
+              </div>
+            </div>
+            <div class="inputs">
+              <div class="input-icon"><i class="fas fa-lock-alt"></i></div>
+              <div class="input-text-div">
+                <input
+                  class="input-text"
+                  type="password"
+                  placeholder="Password"
+                />
+              </div>
+            </div>
+            <div class="remember-container">
+              <input type="checkbox" />
+              <label class="remember-text">Remember me</label>
+            </div>
+            <div class="btn-div">
+              <input class="input-btn" type="button" value="Login" />
+            </div>
+            <div class="forgot">
+                <a class="forgot-link" href="http://google.com">Forgot Password?</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
