Forgot link & Remember place are fixed

--- a/2.html
+++ b/2.html
@@ -36,8 +36,8 @@
                         </span>
                         </div>
                         <div class="right-link">
-                            <span class="forgot">
-                                Forgot Password?
+                            <span >
+                                <a class="forgot" href="google.com">Forgot Password?</a>
                             </span>
                         </div>
                         
