--- a/4.html
+++ b/4.html
@@ -10,6 +10,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="main-container">
+            <div class="left-container">
+                    <img class="bg" src="bg.png" alt="">
+                <div class="shadow-bg"></div>
+            </div>
+            <div class="right-container"></div>
+        </div>
+    </div>
 </body>
 </html>
