base login box created

--- a/4.html
+++ b/4.html
@@ -16,7 +16,24 @@
                     <img class="bg" src="bg.png" alt="">
                 <div class="shadow-bg"></div>
             </div>
-            <div class="right-container"></div>
+            <div class="right-container">
+                <div class="login-container">
+                    <div class="login-box">
+                        <div class="help-div">
+                            <span><h4 class="member-text">ALREADY MEMBERS</h2></span>
+                                <a class="help-link" href="google.com">Need help?</a>
+                        </div>
+                        <div class="line"></div>
+                        <div class="inputs-div">
+                            <input class="input-text" type="text" placeholder="Enter your username">
+                        </div>
+                        <div class="inputs-div">
+                            <input class="input-text" type="password" placeholder="Enter your password">
+                            <i class="far fa-eye-slash"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
