login box designed

--- a/4.html
+++ b/4.html
@@ -24,12 +24,21 @@
                                 <a class="help-link" href="google.com">Need help?</a>
                         </div>
                         <div class="line"></div>
-                        <div class="inputs-div">
-                            <input class="input-text" type="text" placeholder="Enter your username">
+                        <div class="inputs-div user-input-div">
+                            <input class="input-text user-input" type="text" placeholder="Enter your username">
                         </div>
                         <div class="inputs-div">
                             <input class="input-text" type="password" placeholder="Enter your password">
                             <i class="far fa-eye-slash"></i>
+                        </div>
+                        <div class="btn-input-div">
+                            <input class="btn-input" type="button" value="SIGN IN">
+                        </div>
+                        <div class="create-div">
+                            <p class="create-text">
+                                Don't have an account yet ?
+                            </p>
+                                <a class="create-link" href="google.com">Create an account</a>
                         </div>
                     </div>
                 </div>
