Header created and styled

--- a/5.html
+++ b/5.html
@@ -10,6 +10,52 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <div class="header-top-div">
+                <div class="social-pages-div">
+                    <i class="social-pages fab fa-facebook-f"></i>
+                    <i class="social-pages fab fa-twitter"></i>
+                    <i class="social-pages fab fa-instagram"></i>
+                </div>
+                <div class="logo-div">
+                    <h1 class="logo-text">Veen<span class="logo-dot">.</span></h1>
+                </div>
+                <div class="search-div">
+                    <div><i class="far fa-search"></i></div>
+                </div>
+            </div>
+            <div class="header-list-div">
+                <div class="list">
+                    <span>Home</span>
+                    <span><i class="far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">Header Styles</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">Post Feautures</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">#Tag</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">Author</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">Features</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+                <div class="list">
+                    <span class="list-text">Contanct</span>
+                    <span><i class="list-icon far fa-chevron-down"></i></span>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
